@@ -26,6 +26,7 @@ python-reahl (3.2.0) unstable; urgency=low
  * Added auto restart for the reahl dev webserver on filesystem changes (blueprint: reahl-serve-with-auto-reload).
  * Added dependency on watchdog.
  * Changed refresh() so that it takes args in order to enable one to specify which of your query_arguments trigger an ajax update (instead of the default, which is all of them).
+ * Added bootstrap flavour of Javascript Dialog and its Buttons. This works differently, there are no Button objects, rather JsFunction and add_js_button.
 
  -- Iwan Vosloo <iwan@reahl.org>  Thu, 13 Aug 2015 14:56:00 +0200
 
